# segfault-course

./: CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  run
courses/: CMakeLists.txt
courses/01-foundations/: CMakeLists.txt  README.md
courses/01-foundations/01-compilation-model/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_color.h  ex02_point.h  ex02_test.cpp  ex03.h  ex03_car.h  ex03_engine.h  ex03_test.cpp  ex04.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_helper.cpp  ex05_test.cpp  ex06.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_a.cpp  ex07_b.cpp  ex07_test.cpp  ex08_format.cpp  ex08_format.h  ex08_math.cpp  ex08_math.h  ex08_test.cpp
courses/01-foundations/02-namespaces/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_detail.cpp  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/01-foundations/03-value-semantics/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/01-foundations/04-strings/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/01-foundations/05-enums/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp
courses/01-foundations/06-auto-and-type-deduction/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/01-foundations/07-structured-bindings/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp
courses/01-foundations/08-casts/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/01-foundations/09-raii/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/01-foundations/10-smart-pointers/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/01-foundations/11-move-semantics/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/01-foundations/12-optional-variant-expected/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/01-foundations/13-error-handling/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/02-standard-library/: CMakeLists.txt  README.md
courses/02-standard-library/14-vector-array-span/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/02-standard-library/15-maps-and-sets/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/02-standard-library/16-iterators/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/02-standard-library/17-algorithms/: CMakeLists.txt  README.md  ex01.h  ex01_test.cpp  ex02.h  ex02_test.cpp  ex03.h  ex03_test.cpp  ex04.h  ex04_test.cpp  ex05.h  ex05_test.cpp  ex06.h  ex06_test.cpp  ex07.h  ex07_test.cpp  ex08.h  ex08_test.cpp
courses/03-types-and-generics/: CMakeLists.txt  README.md
courses/04-concurrency-and-async/: CMakeLists.txt  README.md
courses/05-real-world-patterns/: CMakeLists.txt  README.md
(+677 files in other folders)
