add_subdirectory(24-classes-and-encapsulation)
add_subdirectory(25-constructors-and-initialization)
add_subdirectory(26-operator-overloading)
add_subdirectory(27-inheritance-and-polymorphism)
add_subdirectory(28-rule-of-zero-five)
add_subdirectory(29-function-templates)
add_subdirectory(30-class-templates)
add_subdirectory(31-concepts-and-constraints)
add_subdirectory(32-type-traits-and-constexpr)
add_subdirectory(33-forwarding-references)
add_subdirectory(34-crtp-and-mixins)
