add_subdirectory(43-builder-pattern)
add_subdirectory(44-type-safe-configuration)
add_subdirectory(45-middleware-and-chain-of-responsibility)
add_subdirectory(46-serialization-and-structured-data)
add_subdirectory(47-resource-pools)
add_subdirectory(48-observer-and-event-system)
add_subdirectory(49-http-request-response-modeling)
add_subdirectory(50-logging-and-diagnostics)
add_subdirectory(51-error-propagation-patterns)
add_subdirectory(52-capstone-mini-http-handler)
